# sagopa-api

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
backend/: Cargo.toml  build.rs
backend/migrations/: 1_schema.sql
backend/src/: database.rs  main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: main_app.rs  mod.rs  turkish_chars.rs
