[package]
name = "shuttle-yew-experiment-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.39.0"
shuttle-runtime = { version = "0.39.0" }
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = "0.7.1"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
